--- a/templates/compras.html
+++ b/templates/compras.html
@@ -3,4 +3,12 @@
 
 {% block conteudo %}
 Página de Compras
+
+<ul>
+    {% for compra in compras %}
+        <li>{{ compra.item }}</li>
+    {% endfor %}
+</ul>
+
 {% endblock %}
+<hr>
