--- a/templates/compras.html
+++ b/templates/compras.html
@@ -1,14 +1,21 @@
-{# templates/compras.html #}
-{% extends "_base.html" %}
+{%extends "_base.html"%}
 
-{% block conteudo %}
-Página de Compras
+{%block conteudo%}
+Página de compras
 
+<h3>Adicionar item</h3>
+<form action="compras_adc.php" method="post">
+<input type="text" name="item" placeholder="Escreva o nome do item">
+
+<input type="submit" value="Adicionar">
+</form>
+
+<h3>Minha lista de compras</h3>
 <ul>
     {% for compra in compras %}
-        <li>{{ compra.item }}</li>
+    <li>{{compra.item}} - <a href="excluir.php?id={{compra.id}}">excluir</a>-<a href="editar.php?id={{compra.id}}">editar</a></li> 
     {% endfor %}
+   
 </ul>
+{%endblock%}
 
-{% endblock %}
-<hr>
