Revert "code kaua"
This reverts commit dd1d09e5f1ab0b93db040e0c31e16a32df0a1a84.

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,22 +1,24 @@
-{#templates/_base.html#}
+{# templates/_base.html #}
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Super Twig</title>
+    <title>Super Mega Blaster Hiper Twig</title>
 </head>
 <body>
-    <h1>Super site Twig Master</h1>
+    <h1>Twig :)</h1>
+    <p>Site 1000% top.</p>
     {% if titulo %}
     <h2>{{titulo}}</h2>
-    {%endif%}
+    {% endif %}
     <hr>
-    <a href="index.php">Inicial</a> |
-    <a href="compras.php">Compras</a>
+    <a href="index.php">Inicial</a> | 
+    <a href="compras.php">Compras</a> 
     <hr>
-    
 
     {% block conteudo %}{% endblock %}
+
 </body>
 </html>
