--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,10 @@
-
-    {%extends "_base.html" %}
-
-    {%block conteudo%}
-    <p>Site funcionando 100%</p>
-    <p>Fruta do dia: {{fruta}}</p>
-    {#os sinais se chamam moustache#}
-    {%endblock%}
+{# templates/index.html #}
+{% extends "_base.html" %}
+{% block conteudo %}
+    <p><b>Frutas do dia:</b></p>
+    <ul>
+        <li>{{ frutas[0] }}</li> {# Os sinais { } se chamam moustache #}
+        <li>{{ frutas[1] }}</li>
+        <li>{{ frutas[2] }}</li>
+    </ul>
+{% endblock %}
