fixing, now ok nice

--- a/templates/compras.html
+++ b/templates/compras.html
@@ -1,6 +1,20 @@
-{# templates/compras.html #}
 {% extends "_base.html" %}
 
 {% block conteudo %}
-Página de Compras
-{% endblock %}
+Página de compras
+
+<h3>Adicionar item</h3>
+<form action="compras_adc.php" method="post">
+    <input type="text" name="item" placeholder="Escreva o nome do item">
+    <button type="submit">Adicionar</button>
+</form>
+
+<h3>Minha lista de compras</h3>
+<ul>
+    {% for compra in compras %}
+    <li>
+        {{compra.item}} | <a href="compras_form.php?id={{compra.id}}&item={{compra.item}}">Editar</a> - <a href="excluir.php?id={{compra.id}}&item={{compra.item}}">Excluir</a>
+    </li>
+    {% endfor %}
+</ul>
+{%endblock%}
