coloquei tailwind para enbonitar

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -6,7 +6,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Super Mega Blaster Hiper Twig</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <title>Dammnn lista de compras</title>
 </head>
 
 <body>
