--- a/templates/compras.html
+++ b/templates/compras.html
@@ -1,19 +1,21 @@
 {% extends "_base.html" %}
 
 {% block conteudo %}
-Página de compras
+<p>Adicione os produtos à sua lista de compras!! fiufiu!!!🎉🎉🎉</p>
 
-<h3>Adicionar item</h3>
+<h4>Adicionar item</h4>
 <form action="compras_adc.php" method="post">
     <input type="text" name="item" placeholder="Escreva o nome do item">
     <button type="submit">Adicionar</button>
 </form>
 
-<h3>Minha lista de compras</h3>
+<h4>Minha lista de compras</h4>
 <ul>
     {% for compra in compras %}
     <li>
-        {{compra.item}} | <a href="compras_form.php?id={{compra.id}}&item={{compra.item}}">Editar</a> - <a href="excluir.php?id={{compra.id}}&item={{compra.item}}">Excluir</a>
+        {{compra.item}} | 
+        <a href="compras_form.php?id={{compra.id}}&item={{compra.item}}">Editar</a> - 
+        <a href="excluir.php?id={{compra.id}}&item={{compra.item}}">Excluir</a>
     </li>
     {% endfor %}
 </ul>
