--- a/templates/_base.html
+++ b/templates/_base.html
@@ -17,6 +17,7 @@
         h4 { @apply text-2xl }
         a { @apply text-neutral-100 bg-blue-500 p-1 rounded-lg m-1 }
         input { @apply border-1 p-2 rounded-lg }
+        hr { @apply m-2 }
     </style>
     <title>Dammnn lista de compras</title>
 </head>
