--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,11 @@
 {%extends "_base.html" %}
 
 {%block conteudo%}
+<h3>Status do site: </h3>
 <p>Site funcionando 100%</p>
-<p>Fruta do dia: {{fruta}}</p>
+<h3>Para que serve: </h3>
+<p>Esse site serve para organizar suas compras e saber a data atual. Aproveite!! 🎉🎉🎉</p>
+<h3>E a fruta do dia é: ....</h3>
+<p>Fruta do dia: {{fruta}}!!!</p>
 {#os sinais se chamam moustache#}
 {%endblock%}
