--- a/templates/compras.html
+++ b/templates/compras.html
@@ -15,7 +15,7 @@
     <li>
         {{compra.item}} | 
         <a href="compras_form.php?id={{compra.id}}&item={{compra.item}}">Editar</a> - 
-        <a href="excluir.php?id={{compra.id}}&item={{compra.item}}">Excluir</a>
+        <a href="compras_excluir.php?id={{compra.id}}&item={{compra.item}}">Excluir</a>
     </li>
     {% endfor %}
 </ul>
