--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -2,11 +2,11 @@
 
 {% block conteudo %}
 
-<form action="cadastrar.php" method="POST">
-    <input type="text" name="login">
-    <input type="password" name="senha">
+<form action="fazer_cadastro.php" method="POST">
+    <label for="login">Login: </label><input type="text" name="login"><br>
+    <label for="senha">Senha: </label><input type="password" name="senha"><br>
     <button type="submit">Cadastrar</button>
 </form>
-<a href="index.php?login=true">Possui conta? faça login!</a>
+<a href="index.php">Possui conta? faça login!</a>
 
 {%endblock%}
