--- a/templates/login.html
+++ b/templates/login.html
@@ -2,11 +2,11 @@
 
 {% block conteudo %}
 
-<form action="logar.php" method="POST">
-    <input type="text" name="login">
-    <input type="password" name="senha">
-    <button type="submit">Cadastrar</button>
+<form action="fazer_login.php" method="POST">
+    <label for="login">Login: </label><input type="text" name="login"><br>
+    <label for="senha">Senha: </label><input type="password" name="senha"><br>
+    <button type="submit">Logar</button>
 </form>
-<a href="index.php?login=false">Não possu conta? Cadastre-se!</a>
+<a href="cadastro.php">Não possu conta? Cadastre-se!</a>
 
 {%endblock%}
