edit user e delete user

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -30,11 +30,12 @@
         <nav>
             <ul>
                 {% if logado == 1 %}
-                <li><a class="btn" href="home.php">Inicial</a></li>
-                <li><a class="btn" href="compras.php">Compras</a></li>
-                <li><a class="btn" href="horario.php">Horário</a></li>
-                <li><a class="btn" href="compromissos.php">Compromissos</a></li>
-                <li><a class="btn" href="logout.php">Sair</a></li>
+                <li><a href="home.php">Inicial</a></li>
+                <li><a href="compras.php">Compras</a></li>
+                <li><a href="horario.php">Horário</a></li>
+                <li><a href="compromissos.php">Compromissos</a></li>
+                <li><a href="logout.php">Sair</a></li>
+                <li><a href="user.php">Usuário</a></li>
                 {% endif %}
             </ul>
         </nav>
