--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,12 @@
 {%extends "_base.html" %}
 
 {%block conteudo%}
-<h3>Status do site: </h3>
+<h3>Olá, {{nome}}</h3>
+<h4>Status do site: </h4>
 <p>Site funcionando 100%</p>
-<h3>Para que serve: </h3>
+<h4>Para que serve: </h4>
 <p>Esse site serve para organizar suas compras e saber a data atual. Aproveite!! 🎉🎉🎉</p>
-<h3>E a fruta do dia é: ....</h3>
+<h4>E a fruta do dia é: ....</h4>
 <p>Fruta do dia: {{fruta}}!!!</p>
 {#os sinais se chamam moustache#}
 {%endblock%}
