--- a/templates/user_form.html
+++ b/templates/user_form.html
@@ -5,9 +5,9 @@
 <form action="user_edit.php" method="post">
     <input type="hidden" name="id" value="{{id}}">
     <input type="text" name="login" value="{{login}}"><br>
-    <input type="password" name="senha" placeholder="Senha Atual"><br>
-    <input type="password" name="senha" placeholder="Nova Senha"><br>
-    <input type="password" name="senha" placeholder="Repita a Nova Senha"><br>
+    <input type="password" name="senha_atual" placeholder="Senha Atual"><br>
+    <input type="password" name="senha_nova" placeholder="Nova Senha"><br>
+    <input type="password" name="confirma_senha_nova" placeholder="Repita a Nova Senha"><br>
     <button type="submit">Enviar</button>
 </form>
 
