--- a/templates/user.html
+++ b/templates/user.html
@@ -2,7 +2,12 @@
 
 {% block conteudo %}
 
-<p>{{mensagem}}</p>
+{% if erro %}
+  <div class="alert alert-danger">{{ erro }}</div>
+{% elseif sucesso %}
+  <div class="alert alert-success">{{ sucesso }}</div>
+{% endif %}
+
 <img height="100" width="100" src="https://img.freepik.com/vetores-premium/icone-de-perfil-de-avatar-padrao-imagem-de-usuario-de-midia-social-icone-de-avatar-cinza-silhueta-de-perfil-em-branco-ilustracao-vetorial_561158-3383.jpg?semt=ais_hybrid&w=740" alt="">
 <h3>{{nome}}</h3>
 <br>
